--- a/style.css
+++ b/style.css
@@ -21,49 +21,79 @@ header h2 {
   margin-top: 0;
 }
 
-.section {
+.grid-header {
   background: #000018;
   padding: 1rem;
   border: 10px solid #ffe134;
 }
 
-.section h1 {
+.section-button {
+  background: #000018;
+  padding: 1rem;
+  border: 10px solid #ffe134;
+  color: white;
+  font-family: inherit;
+}
+
+.section-button h1 {
   font-size: 3rem;
 }
 
-.section i {
+.section-button .content {
+  position: relative;
+  max-height: 0;
+  text-align: left;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-in-out;
+  transition: max-height 0.2s ease-in-out;
+}
+
+.section-button i {
   font-size: 2rem;
   color: white;
 }
 
-.section a:link {
+.section-button a:link {
+  font-size: 1.5rem;
   color: #ffe134;
   background-color: transparent;
   text-decoration: none;
   font-weight: bold;
 }
 
-.section a:visited {
+.section-button a:visited {
   color: #ceb900;
   background-color: transparent;
   text-decoration: none;
 }
 
-.section a:hover {
+.section-button a:hover {
   color: #f1d900;
   background-color: transparent;
   text-decoration: underline;
 }
 
-.section a:active {
+.section-button a:active {
   color: #ffe134;
   background-color: transparent;
   text-decoration: underline;
 }
 
-.section p {
+.section-button p {
   font-size: 1.5rem;
   margin: 0 0 0 1rem;
+}
+
+.section-button:hover {
+  cursor: pointer;
+}
+
+.section-button:hover h1 {
+  text-decoration: underline;
+}
+
+.section-button:focus h1 {
+  text-decoration: underline;
 }
 
 footer {
